# AgentLearn

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md  _coverpage.md  _sidebar.md  index.html
docs/01-intro/: 01-agent-intro.md  02-environment-setup.md  03-first-agent.md
docs/02-fundamentals/: 01-prompt-engineering.md  02-chain-pattern.md  03-agent-architecture.md  04-memory.md
docs/03-langchain/: 01-core-components.md  02-models-and-tools.md  03-vector-store.md  04-chat-agent.md  05-research-agent.md
docs/04-langgraph/: 01-basics.md  02-state-nodes.md  03-routing-loops.md  04-subgraphs.md  05-workflow-agent.md
docs/05-rag/: 01-principles.md  02-document-processing.md  03-vector-database.md  04-optimization.md  05-enterprise-kb.md
docs/06-advanced/: 01-multi-agent.md  02-evaluation.md  03-cost-control.md  04-security.md
docs/07-deployment/: 01-api-service.md  02-docker.md  03-monitoring.md  04-cicd.md
docs/08-ecosystem/agentscope/: change-log.md  index.md  quickstart.md
docs/08-ecosystem/agentscope/building-blocks/: agent.md  context.md  message-and-event.md  middleware.md  model.md  permission-system.md  tool.md  workspace.md
docs/08-ecosystem/agentscope/deploy/: agent-service.md
docs/08-ecosystem/agentscope/others/: faq.md
docs/08-ecosystem/hiclaw/: README.md  architecture.md  cms-integration.md  declarative-resource-management.md  development.md  dingtalk-setup-guide.md  faq-legacy.md  faq.md  import-worker.md  k8s-native-agent-orch.md  manager-guide.md  quickstart.md  windows-deploy.md  worker-guide.md
docs/08-ecosystem/survey/: 01-core-frameworks.md  02-multi-agent-patterns.md  03-tool-ecosystem.md  04-memory-systems.md  05-low-code-platforms.md  06-domain-agents.md  07-evaluation-tools.md  08-security-sandbox.md  09-selection-guide.md
examples/01-hello-agent/: README.md  main.py
examples/02-tool-use/: README.md  main.py
examples/03-chat-agent/: README.md  main.py
examples/04-research-agent/: README.md  main.py
examples/05-streamlit-chat/: README.md  main.py
examples/06-multi-agent/: README.md  main.py
scripts/: Dockerfile  deploy.sh  setup.sh
src/agentlearn/: __init__.py  agent.py  base.py  memory.py  message.py  pipeline.py  tools.py  utils.py
tests/: test_agent.py
